Attempt to fix margin collapse

--- a/styles.css
+++ b/styles.css
@@ -243,6 +243,7 @@ h1 {
 
 .services{
     background-color: #E7F0F3;
+    text-align: center;
 }
 
 .services-title {
@@ -257,6 +258,7 @@ h1 {
 }
 
 .services-sub {
+    display: inline-block;
     font-size: 18px;
     font-weight: 500;
     width: 90%;
